# comics_viewer

./: .gitignore  Dockerfile  README.md  pyproject.toml  pyrefly.toml  requirements.txt
.github/workflows/: ci.yml
ci/: Dockerfile  ci.sh  run.sh
src/: pyrightconfig.json
src/OpenGL/: wrapper.pyi
src/comics_viewer/: __main__.py  add_collection_dialog.glade  app.py  archive.py  comics_icon.glade  comics_icon.glade~  cover_cache.py  cursor.py  gi_helpers.py  in_mem_cache.py  layout.glade  library.py  manage.py  names.py  page_icon.glade  remove_collection_dialog.glade  thumb.py  tiles.py  utils.py  view.fs  view.py  view.vs  view_gestures.py  view_timer.py
src/tests/: test_archive.py
test/data/: rar.cbr  zip.cbz
test/test_comics_viewer/: test_archive.py  test_in_mem_cache.py  test_thumb.py  test_utils.py  test_view.py
